# Test-CI

./: .bumpversion.cfg  .flake8  pyproject.toml  tox.ini
.github/workflows/: build-workflow-call.yml  build.yml  bump-version-workflow-call.yml  lint-format.yml  release.yml  test-commit-bot.yml  test-fetch-all-repo-branches.yml
example_package_FrankySnow9/: example.py
src/example_package_FrankySnow9/: example.py
tests/: test_example.py
