[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example_package_FrankySnow9"
version = "0.9.0"
description = "A small example package"
authors = [{name = "FrankySnow9", email = "clairicia.rcj.francis@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/francis-clairicia/Test-CI"

[tool.flit.sdist]
exclude = [
    ".github/"
]

[tool.isort]
profile = "black"
line_length = 130
combine_as_imports = true

[tool.black]
line-length = 130
target-version = ["py37", "py38", "py39", "py310"]

[tool.mypy]
python_version = "3.7"
strict = true
